Fixing mobile spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -11185,7 +11185,7 @@ body {
   font-family: "Varela Round", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 2.3rem;
   line-height: 2.5rem;
-  letter-spacing: 0.8rem;
+  letter-spacing: 0.5rem;
   background: linear-gradient(#f2f2f2, #1a1a1a00);
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
@@ -11199,6 +11199,7 @@ body {
   .masthead h1, .masthead .h1 {
     font-size: 4rem;
     line-height: 4rem;
+    letter-spacing: 0.8rem;
   }
 }
 @media (min-width: 992px) {
